--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -2,15 +2,12 @@
   <h1><%= @restaurant.name %></h1>
   <p><%= @restaurant.address %></p>
   <p><%= @restaurant.phone_number %></p>
-  <p><%= @restaurant.category %></p>
+  <p><%= @restaurant.category.capitalize %></p>
   <%= link_to "Write a review", new_restaurant_review_path(@restaurant.id) %>
-  <li class="list-group-item">
+  <%= render template: "reviews/new", restaurant: @restaurant, review: @review  %>
+  <div class="reviews">
     <% @restaurant.reviews.each do |review| %>
-      <%= review.content %>
-      <%= link_to "Delete",
-        review_path(@restaurant.reviews),
-        data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
-      %>
+      <li><%= review.content %> --- <%= link_to "Delete", review_path(@restaurant.reviews), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %></li>
     <% end %>
-  </li>
+  </div>
 </div>
