--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,9 +1,3 @@
 <div class="container">
-  <%= simple_form_for(@restaurant) do |f| %>
-    <%= f.input :name %>
-    <%= f.input :address %>
-    <%= f.input :phone_number %>
-    <%= f.input :category %>
-    <%= f.submit %>
-  <% end %>
+    <%= render "form", restaurant: @restaurant %>
 </div>
