--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,3 @@
 <div class="container">
-  <%= simple_form_for([@restaurant, @review]) do |f| %>
-    <%= f.input :rating %>
-    <%= f.input :content %>
-    <%= f.submit %>
-  <% end %>
+  <%= render "reviews/form", restaurant: @restaurant, review: @review %>
 </div>
